--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,22 +13,11 @@
     </nav>
     <form method="post" enctype="multipart/form-data">
     <div id="generalSettings" class="tab-pane">
-      <div class="field mb-4">
-        <label class="label">Application title</label>
-        <input class="input" type="text" name="app_title" value="{{ app_title }}">
-      </div>
-      <div class="field mb-4">
-        <label class="label">Application logo</label>
-        {% if app_logo_path %}
-        <img src="{{ url_for('logo') }}" alt="logo" style="max-height:3rem;" class="mb-2">
-        {% endif %}
-        <input class="input" type="file" name="app_logo" accept="image/*">
-      </div>
       <div class="box mb-4">
-        <h3 class="title is-6 mb-3">Themes</h3>
-        <div class="field mb-2">
-          <label class="label">Theme</label>
-          <div class="select is-fullwidth">
+        <h3 class="title is-6 mb-3">Appearance</h3>
+        <div class="field mb-2 is-flex is-align-items-center">
+          <label class="label mr-2">Theme</label>
+          <div class="select">
             <select id="themeSelect">
               <option value="" {% if not active_theme %}selected{% endif %}>Custom</option>
               <option value="ocean" {% if active_theme == 'ocean' %}selected{% endif %}>Ocean</option>
@@ -56,6 +45,17 @@
             <input class="input color-input" type="color" name="theme_text" value="{{ theme_text }}">
           </div>
         </div>
+      </div>
+      <div class="field mb-4">
+        <label class="label">Application title</label>
+        <input class="input" type="text" name="app_title" value="{{ app_title }}">
+      </div>
+      <div class="field mb-4">
+        <label class="label">Application logo</label>
+        {% if app_logo_path %}
+        <img src="{{ url_for('logo') }}" alt="logo" style="max-height:3rem;" class="mb-2">
+        {% endif %}
+        <input class="input" type="file" name="app_logo" accept="image/*">
       </div>
     </div>
     <div id="exportSettings" class="tab-pane is-hidden">
