Update ignored duplicates table layout

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -76,15 +76,13 @@
           <label class="label">Branding text</label>
           <input class="input" type="text" name="branding" value="{{ branding }}">
         </div>
-        <div class="columns">
-          <div class="column field mb-4">
-            <label class="label">Primary color</label>
-            <input class="input color-input" type="color" name="primary_color" value="{{ primary_color }}">
-          </div>
-          <div class="column field mb-4">
-            <label class="label">Highlight color</label>
-            <input class="input color-input" type="color" name="highlight_color" value="{{ highlight_color }}">
-          </div>
+        <div class="field mb-4">
+          <label class="label">Primary color</label>
+          <input class="input color-input" type="color" name="primary_color" value="{{ primary_color }}">
+        </div>
+        <div class="field mb-4">
+          <label class="label">Highlight color</label>
+          <input class="input color-input" type="color" name="highlight_color" value="{{ highlight_color }}">
         </div>
       </div>
       <div class="box mb-4">
