--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -296,7 +296,6 @@
             <th>QBO SKU</th>
             <th>Qty</th>
             <th>Total</th>
-            <th>Unmatched</th>
             <th>Action</th>
           </tr>
         </thead>
@@ -309,14 +308,7 @@
             <td>{{ d.qbo_sku }}</td>
             <td>{{ d.quantity }}</td>
             <td>${{ "%.2f"|format(d.total) }}</td>
-            <td class="unmatched-cell">
-              {% if d.unmatched %}<span class="bool-icon has-text-success">✓</span>{% else %}<span class="bool-icon has-text-danger">✗</span>{% endif %}
-            </td>
-            <td>
-              <button data-action="shopify" data-sid="{{ d.shopify_id }}" data-qid="{{ d.qbo_id }}" class="mdc-button mdc-button--raised">Keep Shopify</button>
-              <button data-action="qbo" data-sid="{{ d.shopify_id }}" data-qid="{{ d.qbo_id }}" class="mdc-button mdc-button--raised">Keep QBO</button>
-              <button data-action="both" data-sid="{{ d.shopify_id }}" data-qid="{{ d.qbo_id }}" class="mdc-button mdc-button--raised">Keep Both</button>
-            </td>
+            <td>Ignored</td>
           </tr>
           {% endfor %}
         </tbody>
